<resources>
    <string name="app_name">Sixth Boardgame</string>
    <string name="welcome">WELCOME</string>
    <string name="new_game">New Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="instructions">Game Instructions</string>
    <string name="profile">Profile</string>
    <string name="exclamation_mark_with_front_space">\u00A0!</string>
    <string name="_0">0</string>
    <string name="username_unavailable">Username unavailable</string>
    <string name="score_unavailable">Score unavailable</string>
    <string name="time_unavailable">Time unavailable</string>
    <string name="opponent_unavailable">Opponent unavailable</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="let_s_play">LET´S PLAY</string>
    <string name="wooden_background_image_description">Wood image</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Login</string>
    <string name="sign_up_to_your_new_account">Sign up to your new account</string>
    <string name="are_you_ready">Are You Ready?</string>
    <string name="vs">VS</string>
    <string name="opponent">Opponent</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Continue</string>
    <string name="game_accept">Accept</string>
    <string name="game_decline">Decline</string>
    <string name="gotit">Got It</string>
    <string name="rules">The rules are simple</string>
    <string name="game_instructions">Your goal is to build a tower of six or more disks with your color on top.
        On your turn, you can either start a new tower by adding one of your discs to an empty square on the board,
        or move one or more discs from the top of one tower to the top of another.\n\n
        The twist is that each tower moves like a different chess piece, based on the number of disks in that tower:\n\n
        Stacks with 1 disk (Pawn) move a single square in any orthogonal direction.\n\n
        Stack with 2 disks (Rook) move any number of squares in any orthogonal direction, to the first stack on its path.\n\n
        Stack with 3 disks (Knight) move in an L-shape, 3 squares (2 squares in one orthogonal direction, and 1 in another orthogonal direction).\n\n
        Stack with 4 disks (Bishop) move any number of squares in a diagonal direction to the first stack on its path.\n\n
        Stack with 5 disks (Queen) move any number of squares in any direction (orthogonally or diagonally) to the first stack on its path.\n\n
        Good luck, and enjoy your game!
    </string>
    <string name="you_won">YOU WON</string>
    <string name="congratulations">Congratulations!</string>
    <string name="log_in_to_your_account">Login to your account</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="unfortunately">Unfortunately!</string>
    <string name="you_lost">YOU LOST</string>
    <string name="add_player_...">Add player…</string>
    <string name="start_game">Start Game</string>
    <string name="opponent_name_not_loaded">Opponent name not loaded</string>
    <string name="player_name_not_loaded">Player name not loaded</string>
    <string name="hello_world">Hello, World!</string>
    <string name="whos_turn">WHOS TURN? - not loaded</string>
    <string name="your_turn">YOUR TURN</string>
    <string name="opponents_turn">Opponents turn</string>
    <string name="time_left_not_loaded">Time left not loaded</string>
    <string name="highscore">Highscore</string>
    <string name="opponent_not_loaded">Opponent not loaded</string>
    <string name="time_not_loaded">Time not loaded</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="pending_invites">Received Invites</string>
    <string name="player_name">Player Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="discs_to_move">Discs to move:</string>
    <string name="_2">2</string>
    <string name="username_not_loaded">Username not loaded</string>
    <string name="pop_up_invite">Send an invite?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="s_turn">\'s turn</string>
    <string name="game_ended">\Game has ended</string>
    <string name="give_up_game">Give up game</string>
    <string name="confirm_give_up_title">Confirm Give Up</string>
    <string name="confirm_give_up_message">Are you sure you want to give up?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_player">Add Player</string>
    <string name="add_game">Add Game</string>
    <string name="invited_by">Invite from   %s</string>
    <string name="invited">Invited   %s</string>
    <string name="selected_time">Selected Time: %1$d minutes</string>
    <string name="score">Score:</string>
    <string name="delete_invite">Delete invite?</string>
    <string name="sent_invites">Sent Invites</string>
    <string name="delete">Delete</string>
    <string name="quit">Quit</string>
</resources>