<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerProfileActivity"
    android:background="@drawable/wooden_background"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_xl"
        android:contentDescription="@string/wooden_background_image_description"
        android:src="@drawable/bye_text_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_semibold"
            android:textSize="@dimen/heading_large"
            android:textAllCaps="true" />


        <TextView
            android:id="@+id/textViewExclamation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exclamation_mark_with_front_space"
            android:textColor="@color/orange_light"
            android:fontFamily="@font/inter_semibold"
            android:textSize="@dimen/heading_large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationZ="@dimen/height_view_medium"
        android:layout_marginTop="@dimen/margin_xxl">

        <TextView
            android:id="@+id/textButtonSignOut"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/sign_out"
            android:elevation="@dimen/elevation_small"
            android:background="@drawable/gradient_button_orange"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_medium"
            android:fontFamily="@font/inter_bold" />

        <TextView
            android:id="@+id/textButtonDeleteAccount"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/delete_account"
            android:elevation="@dimen/elevation_small"
            android:background="@drawable/gradient_button_red"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:fontFamily="@font/inter_bold"
            android:layout_margin="@dimen/margin_small"/>

    </LinearLayout>

</LinearLayout>
