<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/heading_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_view_white"
        android:layout_marginBottom="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/sign_up_to_your_new_account"
        android:textColor="@color/grey"
        android:textSize="@dimen/heading_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="64dp"
        android:background="@drawable/oval_edittext"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:hint="@string/username"
        android:padding="@dimen/margin_small"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="64dp"
        android:background="@drawable/oval_edittext"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:hint="@string/email"
        android:padding="@dimen/margin_small"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="64dp"
        android:background="@drawable/oval_edittext"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:hint="@string/password"
        android:padding="@dimen/margin_small"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.588" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="64dp"
        android:background="@drawable/oval_edittext"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:padding="@dimen/margin_small"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="@dimen/buttons_sign_up_width"
        android:layout_height="@dimen/buttons_sign_up_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="64dp"
        android:background="@drawable/gradient_button_orange"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="660dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/grey"
        android:textSize="@dimen/heading_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logInTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="660dp"
        android:text="@string/log_in"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/heading_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>