<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/are_you_ready"
        android:textColor="@color/orange_light"
        android:textSize="@dimen/heading_small"
        android:shadowColor="@color/orange_light"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="8" />

    <LinearLayout
        android:id="@+id/opponentsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/username"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/vsDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/vs"
            android:textColor="@color/orange_light"
            android:textSize="24sp"
            android:shadowColor="@color/orange_light"
            android:shadowDx="4"
            android:shadowDy="10"
            android:shadowRadius="15" />

        <TextView
            android:id="@+id/opponentsDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/inter_bold"
            android:text="@string/opponents"
            android:textColor="@color/grey"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textButtonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient_button_red"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/textButtonContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient_button_green"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:paddingVertical="10dp" />
    </LinearLayout>

</LinearLayout>
