<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="@dimen/margin_xxs"
    android:layout_margin="@dimen/margin_medium">

    <LinearLayout
        android:layout_width="@dimen/width_large"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_xl"
        android:elevation="@dimen/margin_xxs"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/unfortunately"
            android:textColor="@color/orange_dark"
            android:textSize="@dimen/heading_small"
            android:shadowColor="@color/red_light"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="8" />

        <LinearLayout
            android:id="@+id/opponentsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/usernameDialogTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/username"
                android:textColor="@color/grey"
                android:textSize="@dimen/heading_small" />

            <TextView
                android:id="@+id/vsDialogTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/you_lost"
                android:textColor="@color/orange_dark"
                android:textSize="@dimen/heading_large"
                android:shadowColor="@color/red_light"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="8" />
        </LinearLayout>

        <TextView
            android:id="@+id/textButtonContinue"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/gradient_button_red"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:padding="@dimen/margin_small"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</FrameLayout>
